# auto_uav

./: CMakeLists.txt  package.xml
include/: ball_cap.hpp  detector_tracker.hpp  pid.h  zed_helper.hpp
launch/: auto_cap.launch
src/: auto_ball_cap.cpp  auto_nav.cpp  blob_detect.cpp  detect_info.cpp  pid_auto_uav.cpp  predict_transform.cpp
