<?xml version="1.0"?>
<package format="2">
  <name>auto_uav</name>
  <version>0.0.1</version>
  <description>Autonomous UAV package for MBZIRC challenge 1</description>

  <maintainer email="ahmedhumais@gmail.com">Ahmed Humais</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
